# IA

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
.cache/: preprocesed_dataset.parquet
notebooks/: notebook.ipynb  notebook.py
notebooks/utils/: a.py  create_parquet.py  data_aumentation.py  image_grayscaler.py  image_normalization.py  image_resizer.py  load_image.py  process_data.py  split_lf.py  visualice.py
notebooks/utils/training/: CNN.py  autoencoder_trainer.py  checkpoint.py  custom_dataloader.py  dataloader.py  early_stoping.py  trainer.py  trainerClass.py
src/FastAPI/: app.py  models.py
src/back/: __init__.py  __main__.py
src/back/api/: model_controller.py
src/back/model/: model.py  processImg.py
src/model/: model.py
src/model/iaModelClasses/: classification.py  encoder.py
utils/: load_image.py  visualice.py
