[project]
name = "backAnalyzer"
version = "0.1.0"
description = "IA model to detect back malformations"
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "optuna",
    "pathlib",
    "opencv-python",  
    "numpy",          
    "polars",         
    "pydicom",        
    "torch>=2.0.0",  
    "torchvision",    
    "tqdm",           
    "typing-extensions", 
]